<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <!--导航栏-->
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/head_green">
    <TextView
        android:id="@+id/search_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/back_btn"
        android:layout_margin="12dp"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/search_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title_name"
        android:textSize="24sp"
        android:textColor="@color/font_white"
        android:layout_centerInParent="true"/>
</RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="搜索"
        android:gravity="center"
        android:textColor="@color/head_green"
        android:textSize="20sp"
        android:padding="13dp"
        android:background="@color/search_btn_bg"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_edit_hint"
        android:background="@drawable/search_edittext_style"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:drawableRight="@mipmap/search_right_image"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">
        <TextView
            android:id="@+id/search_hot"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_hot_text"
        android:textSize="20sp"
        android:textColor="@color/font_white"
        android:background="@color/head_green"
        android:gravity="center"
        android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/search_history"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_history_text"
            android:textSize="20sp"
            android:textColor="@color/font_white"
            android:background="@color/search_bar_false_bg"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>
    <!--热门搜索栏-->
    <LinearLayout
        android:id="@+id/hot_search_caidan"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--第一列-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoga_ball"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoha_colthes"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <!--第二列-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoga_brick"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoga_mat"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <!--第三列-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_yoga_colthes"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yuga_xiangxun"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--历史搜索提示栏-->
    <LinearLayout
        android:id="@+id/history_search_caidan"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--第一列-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoga_ball"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <!--第二列-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoga_brick"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <!--第三列-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoha_colthes"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <!--第四列-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yoga_brick"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/search_tishi_style"
                    android:textSize="15sp"
                    android:textColor="@color/font_white"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_black"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="12dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginRight="12dp">
            <TextView
                android:id="@+id/search_qingchu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_hot_text"
                android:textSize="20sp"
                android:textColor="@color/font_white"
                android:background="@color/head_green"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
